@@ -25,57 +25,56 @@ import java.util.*;
  */
 @Component
 public class RetrieveThenReadApproach implements RAGApproach<String, RAGResponse> {
-    private static final Logger logger = LoggerFactory.getLogger(RetrieveThenReadApproach.class);
-    private CognitiveSearchProxy cognitiveSearchProxy;
-    private OpenAIProxy openAIProxy;
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(RetrieveThenReadApproach.class);
+    private final CognitiveSearchProxy cognitiveSearchProxy;
+    private final OpenAIProxy openAIProxy;
+
     public RetrieveThenReadApproach(CognitiveSearchProxy cognitiveSearchProxy, OpenAIProxy openAIProxy) {
         this.cognitiveSearchProxy = cognitiveSearchProxy;
         this.openAIProxy = openAIProxy;
     }
 
     /**
-     * @param question
+     * @param questionOrConversation
      * @param options
      * @return
      */
     @Override
-    public RAGResponse run(String question, RAGOptions options) {
-    //TODO exception handling
-        SearchPagedIterable searchResults = getCognitiveSearchResults(question, options);
+    public RAGResponse run(String questionOrConversation, RAGOptions options) {
+        //TODO exception handling
+        SearchPagedIterable searchResults = getCognitiveSearchResults(questionOrConversation, options);
 
         List<ContentSource> sources = buildSourcesFromSearchResults(options, searchResults);
-        logger.info("Total %s sources found in cognitive search for keyword search query[%s]".formatted(sources.size(),question));
+        LOGGER.info("Total {} sources found in cognitive search for keyword search query[{}]", sources.size(),
+            questionOrConversation);
 
-        var retrieveThenReadPrompt = new SemanticSearchAskPrompt(sources,question);
-
+        var retrieveThenReadPrompt = new SemanticSearchAskPrompt(sources, questionOrConversation);
 
         var completionsOptions = buildCompletionsOptions(retrieveThenReadPrompt);
 
-
         Completions completionsResults = openAIProxy.getCompletions(completionsOptions);
 
-        logger.info("Completion generated with Prompt Tokens[{}], Completions Tokens[{}], Total Tokens[{}]",
+        LOGGER.info("Completion generated with Prompt Tokens[{}], Completions Tokens[{}], Total Tokens[{}]",
                 completionsResults.getUsage().getPromptTokens(),
                 completionsResults.getUsage().getCompletionTokens(),
                 completionsResults.getUsage().getTotalTokens());
-
 
         return new RAGResponse.Builder()
                                 .prompt(retrieveThenReadPrompt.getFormattedPrompt())
                                 .answer(completionsResults.getChoices().get(0).getText())
                                 .sources(sources)
-                                .question(question)
+                                .question(questionOrConversation)
                                 .build();
-
     }
 
     private  CompletionsOptions buildCompletionsOptions(SemanticSearchAskPrompt retrieveThenReadPrompt) {
-        CompletionsOptions completionsOptions = new CompletionsOptions(new ArrayList<>( Arrays.asList(retrieveThenReadPrompt.getFormattedPrompt())));
+        CompletionsOptions completionsOptions = new CompletionsOptions(new ArrayList<>(Collections.singletonList(retrieveThenReadPrompt.getFormattedPrompt())));
 
         // Due to a potential bug when using JVM 17 and java openai SDK 1.0.0-beta.2, we need to provide default for all properties to avoid 404 bad Request on the server
         completionsOptions.setMaxTokens(1024);
         completionsOptions.setTemperature(0.3);
-        completionsOptions.setStop(Arrays.asList("\n"));
+        completionsOptions.setStop(List.of("\n"));
         completionsOptions.setLogitBias(new HashMap<>());
         completionsOptions.setEcho(false);
         completionsOptions.setN(1);
@@ -93,7 +92,7 @@ public class RetrieveThenReadApproach implements RAGApproach<String, RAGResponse
         var searchOptions = new SearchOptions();
 
         Optional.ofNullable(options.getTop()).ifPresentOrElse(
-                value -> searchOptions.setTop(value),
+                searchOptions::setTop,
                 () -> searchOptions.setTop(3));
         Optional.ofNullable(options.getExcludeCategory())
                 .ifPresentOrElse(
@@ -111,27 +110,24 @@ public class RetrieveThenReadApproach implements RAGApproach<String, RAGResponse
            }
         });
 
-        SearchPagedIterable searchResults = this.cognitiveSearchProxy.search(question, searchOptions, Context.NONE);
-        return searchResults;
+        return this.cognitiveSearchProxy.search(question, searchOptions, Context.NONE);
     }
 
     private List<ContentSource> buildSourcesFromSearchResults(RAGOptions options, SearchPagedIterable searchResults) {
-        List<ContentSource> sources = new ArrayList<ContentSource>();
+        List<ContentSource> sources = new ArrayList<>();
 
         searchResults.iterator().forEachRemaining(result ->
         {
            var searchDocument = result.getDocument(SearchDocument.class);
 
-           /**
+           /*
             If captions is enabled the content source is taken from the captions generated by the semantic ranker.
             Captions are appended sequentially and separated by a dot.
             */
            if(options.isSemanticCaptions()) {
-               StringBuffer sourcesContentBuffer = new StringBuffer();
+               StringBuilder sourcesContentBuffer = new StringBuilder();
 
-               result.getCaptions().forEach(caption -> {
-                   sourcesContentBuffer.append(caption.getText()).append(".");
-               });
+               result.getCaptions().forEach(caption -> sourcesContentBuffer.append(caption.getText()).append("."));
 
                sources.add(new ContentSource((String)searchDocument.get("sourcepage"), sourcesContentBuffer.toString()));
            } else {
